--- a/src/styles/programCard.module.css
+++ b/src/styles/programCard.module.css
@@ -3,6 +3,7 @@
   border-radius: 25% 10%;
   perspective: 1000px;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .imgCard {
@@ -29,6 +30,9 @@
 }
 
 .frontInner {
+  display: flex;
+  justify-content: center; /* Horizontally center the content */
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.4);
   position: absolute;
   top: 0;
@@ -54,3 +58,4 @@
   height: 100%;
   backface-visibility: hidden;
 }
+
