--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -419,7 +419,7 @@ button.cta:hover {
 }
 
 .flower:after {
-    content: "Login";
+    /* content: "Login"; */
     font-size: 15px;
     left: 18px;
     top: 0px;
