--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,8 +7,8 @@
     position:absolute;
     color:white;
     font-size:90pt;
-    padding-top :9%;
-    padding-left:58%;
+    margin-top :17%;
+    margin-left:58%;
 }
 .coverImg{  
     height:750px;
