--- a/src/components/Cities/slider.css
+++ b/src/components/Cities/slider.css
@@ -1,4 +1,4 @@
-body {
+.body {
   background: #ddd;
   min-height: 100vh;
   margin: 0;
@@ -7,11 +7,11 @@ body {
   justify-content: center;
 }
 
-main {
+.main {
   background-size: cover;
   box-shadow: inset 0 0 100vw 100vw rgba(0,0,0,0.3), 0 16px 8px -8px rgba(0, 0, 0, 0.4);
   height: 100vh;
-  width: 100vw; 
+  /* width: 100vw;  */
   padding: 0 0 32px;
   display: flex;
   flex-direction: column; 
