--- a/src/components/Countries/Country.css
+++ b/src/components/Countries/Country.css
@@ -41,7 +41,7 @@
   }
   
   
-  
+/*   
   h1{
     font-family: 'Righteous', sans-serif;
     color: rgba(255,255,255,0.98);
@@ -58,7 +58,7 @@
     letter-spacing: 2px;
     text-transform: uppercase;
   }
-  
+   */
   
   .button-wrapper{
       margin-top: 8px;
