--- a/src/components/Cities/slider.css
+++ b/src/components/Cities/slider.css
@@ -1,17 +1,10 @@
-.body {
-  background: #ddd;
-  min-height: 100vh;
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 
 .main {
   background-size: cover;
   box-shadow: inset 0 0 100vw 100vw rgba(0,0,0,0.3), 0 16px 8px -8px rgba(0, 0, 0, 0.4);
   height: 100vh;
-  /* width: 100vw;  */
+  /* width: 100vw  */
   padding: 0 0 32px;
   display: flex;
   flex-direction: column; 
@@ -158,7 +151,7 @@
   -ms-overflow-style: none;
 }
 
-@media screen and (max-width: 960px) {
+/* @media screen and (max-width: 960px) {
   main {
     display: flex;
     flex-direction: column;
@@ -207,4 +200,4 @@
     margin: 8px 0;
     transform: scale(0.9);
   }
-}
+} */
