--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -17,14 +17,14 @@
 .logoImg{
     height: 90px;
     width: 90px;
-    margin: 20px;
+    
 }
 .welcome,.txt{
     font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
   font-weight: bold;
   font-style: normal;
-  margin: 30px;
+  margin: 20px;
   
 }
 .txt{
@@ -46,7 +46,6 @@
     height: 500px;
     width:100%
 }
-
 .footer:before {
     content: "";
     position: absolute;
@@ -57,11 +56,9 @@
     opacity: 0.9;
     z-index: -1;
 }
-
 .footer li {
     line-height: 1.5;
 }
-
 .footer a {
     color: #aaa;
 }
@@ -72,26 +69,83 @@
     height: 1px;
     background: #a2aebb;
 }
-
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
-
 .row{
     display: block;
 }
-
 main .row{
     min-height: 200px;
 }
-
 main .row:before,
 main .row:after {
     content: "";
     display: table;
 }
+.exp{
+    background-color: lightgray;
+    padding: 55px;
+}
+.expImg,.exp,.priceImg{
+    width:90%;
+    height:500px;
+    margin-left:60px;
+    margin-right:60px;
+    margin-top: 170px;
+    border-radius: 20px;
+}
 
+button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #7C782F;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 20px;
+    padding: 16px;
+    width: 130px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 20px;
+   }
+   
+   button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+   }
+   
+   button span:after {
+    content: '»';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -15px;
+    transition: 0.5s;
+   }
+   
+   button:hover span {
+    padding-right: 15px;
+   }
+   
+   button:hover span:after {
+    opacity: 1;
+    right: 0;
+   }  
+   .priceImg,.priceList{
+    height: 90vh;
+   }
+   .priceList{
+    width:90%;
+    margin-left:60px;
+    margin-right:60px;
+    margin-top: 170px;
+    border-radius: 20px;
+   }
 
-    
+  
