--- a/src/styles/SearchButton.module.css
+++ b/src/styles/SearchButton.module.css
@@ -27,5 +27,5 @@
   }
   /* SearchButton.module.css */
 .input::placeholder {
-  color: #ccc; /* Placeholder color */
+  color: white; /* Placeholder color */
 }
