--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,3 +1,15 @@
+
+.txt{ 
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    font-family: "Sedan SC", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  margin: 10px;
+  
+}
+
 .button {
     margin-top: 8px;
     --width: 100px;
