--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,20 +1,22 @@
 .colourblock {
     background: #DFD0B8;
     /* width: 60%; */
-    padding: 7% 20% 10% 20%;
+    padding: 3% 20% 5% 20%;
     color: #fff;
 }
 
-h1 {
-    text-align: center;
+.h1 {
+    text-align: left;
     font-size: 80px;
     font-family: 'wire one', serif;
     font-weight: normal;
 }
 
-p {
+.p {
+    margin: 20px;
     font-size: 20px;
     font-family: 'Raleway', serif;
+    color: white;
 }
 
 
@@ -23,8 +25,8 @@ p {
 /*  SCALLOP up    */
 /*----------------*/
 .scallopup {
-    height: 100px;
-    width: 100%;
+    height: 50px;
+    /* width: 100%; */
     background: -webkit-gradient(radial, 50% 100%, 10, 50% 100%, 40, from(#DFD0B8), color-stop(0.49, #DFD0B8), color-stop(0.51, #fff), to(white));
     -webkit-background-size: 49px 100%;
 }
