--- a/src/styles/programStyle.module.css
+++ b/src/styles/programStyle.module.css
@@ -1,6 +1,6 @@
 .ad {
     height: 60vh;
-    background-image: url("/public/two-tents-field-with-word-nike-t.jpg");
+    background-image: url("//res2.weblium.site/res/5dcd5a246781f40021f8ad88/5dcd9c245241fe0022d96018?nowebp&quot;");
     background-size: cover;
     background-position:  25% 75%;
     /* opacity: 0.9; */
