--- a/src/components/Countries/Country.css
+++ b/src/components/Countries/Country.css
@@ -18,17 +18,23 @@
   .wrapper {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     
   }
   
   
   .banner-image {
     height: 300px;
-    width: 300px;
+    width: 90%;
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.255);
     margin-bottom: 10px;
     overflow: hidden; 
+
+
   }
   
   .banner-image img {
@@ -72,7 +78,15 @@
     text-transform: uppercase;
   }
    */
-  
+   .txt{
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+    color: black;
+    font-size: 40pt;
+    margin-bottom: 40px;
+}
   .button-wrapper{
       margin-top: 8px;
     }
@@ -87,9 +101,9 @@
         font-weight: 600;
         display: flex;
         align-items: center;
-        background: rgba(0, 212, 255, 0.9);
+        background: #7C782F;
         color: black;
-      border: 1px solid rgba(0, 212, 255, 0.6);
+      border: 1px solid #7C782F
       }
       
       .btn:hover {
@@ -122,7 +136,7 @@
           outline: none;
         transform: scale(1.125);  
         border-color: rgba(255, 255, 255, 0.9);
-        filter: drop-shadow(0 10px 5px rgba(0, 212, 255, 0.6));
+        filter: drop-shadow(0 10px 5px #7C782F);
         transition: all .3s ease; 
   
       }
