--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,2 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poetsen+One&family=Roboto+Slab:wght@100..900&display=swap');
+
+
+*{
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+}
