--- a/src/App/habitations/components/coverItem/coveritem.css
+++ b/src/App/habitations/components/coverItem/coveritem.css
@@ -4,16 +4,9 @@
 }
 #habitationsLabel{
 	font-size: 80px;
+	margin-top: 250px;
 	
 }
-
-
-
-
-
-
-
-
 .grid {
 	position: relative;
 	clear: both;
@@ -38,7 +31,7 @@
 	position: relative;
 	display: block;
 	width: 100vh;
-	height: 60vh;
+	height: 70vh;
 	min-height: 100%;
 	max-width: 100%;
 	opacity: 0.8;
